--- a/index.html
+++ b/index.html
@@ -17,10 +17,23 @@
     <div id="todowrapper">
         <div id="todo">
             <textarea id="enter-todo" spellcheck="false"></textarea> <i class="fa fa-plus" id="addTodo"></i>
+            <!-- filters -->
+
+            <div id="status">
+                <span class ="active" id="all">All</span>
+                <span id="pending">Pending</span>
+                <span id="completed">Completed</span>
+            </div>
+
+
 
             <div id="todos">
             </div>
+            <span id="tasks-length"></span>
+
         </div>
+
+    </div>
         <script src="script.js"></script>
 </body>
 
